--- a/webpages/home.html
+++ b/webpages/home.html
@@ -6,16 +6,19 @@
     <title>Gym Buddy App</title>
 </head>
 <body>
-    <nav><a href=""></a></nav>
-    <nav><a href=""></a></nav>
+    <nav><a href="home.html"></a></nav>
+    <nav><a href="landing-page.html"></a></nav>
     <nav><a href=""></a></nav>
 
-    //download section//
+    
     <section id="download-app">
         <h2>Download Mobile App</h2>
     </section>
     <section id="about-app">
+        <p>LEARN MORE</p>
         <h2>About Us</h2>
+        <p>A fitness tracker that allows users to log workouts, track diet, set reminders, view log history and track progress over time..</p>
+        <i></i>
     </section>
 </body>
 </html>
