--- a/webpages/home.html
+++ b/webpages/home.html
@@ -10,7 +10,7 @@
     <nav><a href="landing-page.html"></a></nav>
     <nav><a href=""></a></nav>
 
-    
+    //download section//
     <section id="download-app">
         <h2>Download Mobile App</h2>
     </section>
