--- a/webpages/home.html
+++ b/webpages/home.html
@@ -7,9 +7,11 @@
     <title>Gym Buddy App</title>
   </head>
   <body>
-    <nav><a href="home.html"></a></nav>
-    <nav><a href="landing-page.html"></a></nav>
-    <nav><a href=""></a></nav>
+   <nav>
+    <a href="home.html">Home</a>
+    <a href="">Workout</a>
+    <a href="contact.html">Contact Us</a>
+   </nav>
 
     <!--download section-->
     <section id="download-app">
