--- a/webpages/login-landing.html
+++ b/webpages/login-landing.html
@@ -6,8 +6,26 @@
     <title>Landing Page</title>
 </head>
 <body>
-     <nav><a href=""></a></nav>
-    <nav><a href=""></a></nav>
-    <nav><a href=""></a></nav>
+   <nav>
+    <a href="home.html">Home</a>
+    <a href="">Workout</a>
+    <a href="">Contact Us</a>
+   </nav>
+   <div class="login-container">
+    <h2>Login</h2>
+    <form action="#" method="POST">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" placeholder="Enter username" required />
+
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" placeholder="Enter password" required />
+
+      <input type="submit" value="Login" />
+    </form>
+    <div class="extra-links">
+      <p><a href="#">Forgot password?</a></p>
+      <p>Don't have an account? <a href="#">Sign up</a></p>
+    </div>
+  </div>
 </body>
 </html>
