--- a/webpages/home.html
+++ b/webpages/home.html
@@ -9,6 +9,7 @@
   <body>
    <nav>
     <a href="home.html">Home</a>
+    <a href="monthly-planner.html">Planner</a>
     <a href="">Workout</a>
     <a href="contact.html">Contact Us</a>
    </nav>
