--- a/webpages/contact.html
+++ b/webpages/contact.html
@@ -6,6 +6,12 @@
     <title>Contact Us</title>
 </head>
 <body>
+    <nav>
+    <a href="home.html">Home</a>
+    <a href="monthly-planner.html">Planner</a>
+    <a href="">Workout</a>
+    <a href="contact.html">Contact Us</a>
+   </nav>
     <div class="contact-container">
     <h2>Contact Us</h2>
     <form action="#" method="POST">
