--- a/webpages/signup-landing.html
+++ b/webpages/signup-landing.html
@@ -6,9 +6,12 @@
     <title>Landing Page</title>
 </head>
 <body>
-     <nav><a href=""></a></nav>
-    <nav><a href=""></a></nav>
-    <nav><a href=""></a></nav>
+     <nav>
+    <a href="home.html">Home</a>
+    <a href="monthly-planner.html">Planner</a>
+    <a href="">Workout</a>
+    <a href="contact.html">Contact Us</a>
+   </nav>
     <div class="signup-container">
     <h2>Create an Account</h2>
     <form action="#" method="POST">
