--- a/webpages/login-landing.html
+++ b/webpages/login-landing.html
@@ -8,8 +8,9 @@
 <body>
    <nav>
     <a href="home.html">Home</a>
+    <a href="monthly-planner.html">Planner</a>
     <a href="">Workout</a>
-    <a href="">Contact Us</a>
+    <a href="contact.html">Contact Us</a>
    </nav>
    <div class="login-container">
     <h2>Login</h2>
