--- a/webpages/monthly-planner.html
+++ b/webpages/monthly-planner.html
@@ -6,6 +6,12 @@
     <title>Monthly Planner/title>
 </head>
 <body>
+    <nav>
+    <a href="home.html">Home</a>
+    <a href="monthly-planner.html">Planner</a>
+    <a href="">Workout</a>
+    <a href="contact.html">Contact Us</a>
+   </nav>
     <h1>📅 Monthly Planner</h1>
   <div class="container">
     <!-- Calendar -->
