--- a/webpages/home.html
+++ b/webpages/home.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>Gym Buddy App</title>
   </head>
   <body>
+    <header class="landing">
    <nav>
     <a href="home.html">Home</a>
     <a href="monthly-planner.html">Planner</a>
@@ -44,10 +46,11 @@
       ></i>
       <button type="submit">Sign Up</button>
       <button type="submit">Log In</button>
-      <img src="/images/smartphone-153650_1280.png" alt="" width="50%" />
+      <img src="/images/smartphone-153650_1280.png" alt="" width="20%" />
       <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/ellipsis.png" alt="ellipsis"/>
     </section>
-    <section id="about-app">
+</header>
+    <section class="about">
       <p>LEARN MORE</p>
       <h2>About Us</h2>
       <p>
