--- a/webpages/home.html
+++ b/webpages/home.html
@@ -10,10 +10,10 @@
   <body>
     <header class="landing">
    <nav>
-    <a href="home.html">Home</a>
-    <a href="monthly-planner.html">Planner</a>
-    <a href="">Workout</a>
-    <a href="contact.html">Contact Us</a>
+    <a href="home.html" id="nav-a">Home</a>
+    <a href="monthly-planner.html" id="nav-a">Planner</a>
+    <a href="" id="nav-a">Workout</a>
+    <a href="contact.html" id="nav-a">Contact Us</a>
    </nav>
 
     <!--download section-->
@@ -49,7 +49,7 @@
       <img src="/images/smartphone-153650_1280.png" alt="" width="20%" />
       <img width="50" height="50" src="https://img.icons8.com/ios-filled/50/ellipsis.png" alt="ellipsis"/>
     </section>
-</header>
+
     <section class="about">
       <p>LEARN MORE</p>
       <h2>About Us</h2>
@@ -58,5 +58,6 @@
         reminders, view log history and track progress over time..
       </p>
     </section>
+</header>
   </body>
 </html>
