--- a/webpages/login-landing.html
+++ b/webpages/login-landing.html
@@ -29,4 +29,14 @@
     </div>
   </div>
 </body>
+<div>
+    <section id="login" class="form-section">
+    <h3>Login</h3>
+    <form action="/login" method="POST">
+      <input type="email" name="email" placeholder="Email" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <input type="submit" value="Login" />
+    </form>
+  </section>
+</div>
 </html>
