--- a/webpages/monthly-planner.html
+++ b/webpages/monthly-planner.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="style.css" /> 
     <title>Monthly Planner</title>
 </head>
-<body>
+<body class="Planner">
     <nav>
     <a href="home.html">Home</a>
     <a href="monthly-planner.html">Planner</a>
@@ -13,7 +14,7 @@
     <a href="contact.html">Contact Us</a>
    </nav>
    
-    <h1>📅 Monthly Planner</h1>
+    <h1> Monthly Planner</h1>
   <div class="container">
     <!-- Calendar -->
     <div class="calendar">
