--- a/webpages/home.html
+++ b/webpages/home.html
@@ -8,60 +8,47 @@
     <title>Gym Buddy App</title>
   </head>
   <body class="landing">
+    <div class="navbar">
+      <img
+        src="https://img.icons8.com/?size=100&id=ILEBzcnIsnra&format=png&color=000000"
+        alt="gym logo"
+        id="logo"
+      />
       <nav>
         <a href="home.html" id="nav-a">Home</a>
         <a href="monthly-planner.html" id="nav-a">Planner</a>
         <a href="" id="nav-a">Workout</a>
         <a href="contact.html" id="nav-a">Contact Us</a>
       </nav>
-
-      <!--download section-->
-      <section class="download-app">
-        <h2>Download Mobile App</h2>
-        <i
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="100"
-            height="100"
-            viewBox="0 0 50 50"
-          >
-            <path
-              d="M 44.527344 34.75 C 43.449219 37.144531 42.929688 38.214844 41.542969 40.328125 C 39.601563 43.28125 36.863281 46.96875 33.480469 46.992188 C 30.46875 47.019531 29.691406 45.027344 25.601563 45.0625 C 21.515625 45.082031 20.664063 47.03125 17.648438 47 C 14.261719 46.96875 11.671875 43.648438 9.730469 40.699219 C 4.300781 32.429688 3.726563 22.734375 7.082031 17.578125 C 9.457031 13.921875 13.210938 11.773438 16.738281 11.773438 C 20.332031 11.773438 22.589844 13.746094 25.558594 13.746094 C 28.441406 13.746094 30.195313 11.769531 34.351563 11.769531 C 37.492188 11.769531 40.8125 13.480469 43.1875 16.433594 C 35.421875 20.691406 36.683594 31.78125 44.527344 34.75 Z M 31.195313 8.46875 C 32.707031 6.527344 33.855469 3.789063 33.4375 1 C 30.972656 1.167969 28.089844 2.742188 26.40625 4.78125 C 24.878906 6.640625 23.613281 9.398438 24.105469 12.066406 C 26.796875 12.152344 29.582031 10.546875 31.195313 8.46875 Z"
-            ></path>
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            x="0px"
-            y="0px"
-            width="100"
-            height="100"
-            viewBox="0 0 50 50"
-          >
-            <path
-              d="M 7.125 2 L 28.78125 23.5 L 34.71875 17.5625 L 8.46875 2.40625 C 8.03125 2.152344 7.5625 2.011719 7.125 2 Z M 5.3125 3 C 5.117188 3.347656 5 3.757813 5 4.21875 L 5 46 C 5 46.335938 5.070313 46.636719 5.1875 46.90625 L 27.34375 24.90625 Z M 36.53125 18.59375 L 30.1875 24.90625 L 36.53125 31.1875 L 44.28125 26.75 C 45.382813 26.113281 45.539063 25.304688 45.53125 24.875 C 45.519531 24.164063 45.070313 23.5 44.3125 23.09375 C 43.652344 22.738281 38.75 19.882813 36.53125 18.59375 Z M 28.78125 26.3125 L 6.9375 47.96875 C 7.300781 47.949219 7.695313 47.871094 8.0625 47.65625 C 8.917969 47.160156 26.21875 37.15625 26.21875 37.15625 L 34.75 32.25 Z"
-            ></path>
-          </svg>
-        </i>
-        <button type="submit">Sign Up</button>
-        <button type="submit">Log In</button>
-        <img src="/images/smartphone-153650_1280.png" alt="" width="20%" />
+    </div>
+    <!--download section-->
+    <div class="home-container">
+      <div class="download-app">
+        <h1>Download Mobile App</h1>
+        <div class="about">
+          <p>LEARN MORE</p>
+          <h2>About Us</h2>
+          <p>
+            A fitness tracker that allows users to log workouts, track diet, set
+            reminders, view log history and track progress over time..
+          </p>
+        </div>
         <img
-          width="50"
-          height="50"
-          src="https://img.icons8.com/ios-filled/50/ellipsis.png"
-          alt="ellipsis"
+          src="https://img.icons8.com/?size=100&id=S7uGGzULpRw4&format=png&color=000000"
+          alt="apple logo"
+          width="5%"
         />
-      </section>
+        <img
+          src="https://img.icons8.com/?size=100&id=rZwnRdJyYqRi&format=png&color=000000"
+          alt="play store"
+          width="5%"
+        />
 
-      <section class="about">
-        <p>LEARN MORE</p>
-        <h2>About Us</h2>
-        <p>
-          A fitness tracker that allows users to log workouts, track diet, set
-          reminders, view log history and track progress over time..
-        </p>
-      </section>
+        <div class="btn-div">
+          <button type="submit">Sign Up</button>
+          <button type="submit">Log In</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
