--- a/webpages/home.html
+++ b/webpages/home.html
@@ -8,17 +8,19 @@
     <title>Gym Buddy App</title>
   </head>
   <body class="landing">
+    <!--navgigation bar-->
     <div class="navbar">
       <img
-        src="https://img.icons8.com/?size=100&id=ILEBzcnIsnra&format=png&color=000000"
+        src="https://img.icons8.com/?size=100&id=122692&format=png&color=000000"
         alt="gym logo"
         id="logo"
+        width="5%"
       />
-      <nav>
-        <a href="home.html" id="nav-a">Home</a>
-        <a href="monthly-planner.html" id="nav-a">Planner</a>
-        <a href="" id="nav-a">Workout</a>
-        <a href="contact.html" id="nav-a">Contact Us</a>
+     <nav>
+        <a href="home.html" >Home</a>
+        <a href="monthly-planner.html">Planner</a>
+        <a href="Workout.html">Workout</a>
+        <a href="contact.html" >Contact Us</a>
       </nav>
     </div>
     <!--download section-->
@@ -26,27 +28,48 @@
       <div class="download-app">
         <h1>Download Mobile App</h1>
         <div class="about">
-          <p>LEARN MORE</p>
-          <h2>About Us</h2>
-          <p>
-            A fitness tracker that allows users to log workouts, track diet, set
-            reminders, view log history and track progress over time..
-          </p>
+          <div class="learn-more">
+            <h2>About Us</h2>
+            <br />
+            <p>
+              <strong>Gym Buddy App</strong> <br /><i
+                >Your personal pocket trainer</i
+              >. <br /><br />Gym Buddy App is a modern fitness tracker <br />
+              designed to help you stay consistent, motivated, and in control of
+              your fitness journey. Whether you’re lifting weights, tracking
+              your runs, or monitoring your diet, Gym Buddy keeps everything
+              organized in one place. With features like workout logging,
+              progress tracking, goal setting, reminders, and nutrition
+              monitoring, Gym Buddy empowers you to make healthier choices every
+              day. Simple to use, visually engaging, and tailored to your
+              lifestyle — it’s your companion for building strength, stamina,
+              and confidence.
+            </p>
+            <br />
+            <img
+              src="https://img.icons8.com/?size=100&id=30840&format=png&color=FFFFFF"
+              alt="apple logo"
+              width="10%"
+            />
+            <img
+              src="https://img.icons8.com/?size=100&id=rZwnRdJyYqRi&format=png&color=000000"
+              alt="play store"
+              width="10%"
+            />
+          </div>
+          <img
+            src="/images/smartphone-153650_1280.png"
+            alt="cellphone image"
+            width="20%"
+          />
         </div>
-        <img
-          src="https://img.icons8.com/?size=100&id=S7uGGzULpRw4&format=png&color=000000"
-          alt="apple logo"
-          width="5%"
-        />
-        <img
-          src="https://img.icons8.com/?size=100&id=rZwnRdJyYqRi&format=png&color=000000"
-          alt="play store"
-          width="5%"
-        />
-
         <div class="btn-div">
-          <button type="submit">Sign Up</button>
-          <button type="submit">Log In</button>
+          <button type="submit">
+            <a href="signup-landing.html" target="_blank">Sign Up</a>
+          </button>
+          <button type="submit">
+            <a href="login-landing.html" target="_blank">Log In</a>
+          </button>
         </div>
       </div>
     </div>
