--- a/webpages/signup-landing.html
+++ b/webpages/signup-landing.html
@@ -6,12 +6,21 @@
     <title>Landing Page</title>
 </head>
 <body>
-     <nav>
-    <a href="home.html">Home</a>
-    <a href="monthly-planner.html">Planner</a>
-    <a href="">Workout</a>
-    <a href="contact.html">Contact Us</a>
-   </nav>
+     <!--navgigation bar-->
+    <div class="navbar">
+      <img
+        src="https://img.icons8.com/?size=100&id=122692&format=png&color=000000"
+        alt="gym logo"
+        id="logo"
+        width="5%"
+      />
+      <nav>
+        <a href="home.html" >Home</a>
+        <a href="monthly-planner.html">Planner</a>
+        <a href="Workout.html">Workout</a>
+        <a href="contact.html" >Contact Us</a>
+      </nav>
+    </div>
     <div class="signup-container">
     <h2>Create an Account</h2>
     <form action="#" method="POST">
