--- a/webpages/signup-landing.html
+++ b/webpages/signup-landing.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Sign Up </title>
 </head>
 <body>
      <!--navgigation bar-->
@@ -39,10 +40,10 @@
       <label for="confirm-password">Confirm Password</label>
       <input type="password" id="confirm-password" name="confirm-password" placeholder="Re-enter password" required />
 
-      <input type="submit" value="Sign Up" />
+      <button "submit" value="Sign Up">Sign Up</button>
     </form>
     <div class="extra-links">
-      <p>Already have an account? <a href="#">Login</a></p>
+      <p>Already have an account? <a href="login-landing.html">Login</a></p>
     </div>
   </div>
 </body>
