--- a/webpages/login-landing.html
+++ b/webpages/login-landing.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Login</title>
   </head>
   <body>
     <!--navgigation bar-->
@@ -24,7 +25,7 @@
     <div class="login-container">
       <h2>Login</h2>
       <form action="#" method="POST">
-        <label for="username">Username</label>
+        <label for="username">Username:</label>
         <input
           type="text"
           id="username"
@@ -33,7 +34,7 @@
           required
         />
 
-        <label for="password">Password</label>
+        <label for="password">Password:</label>
         <input
           type="password"
           id="password"
@@ -42,27 +43,14 @@
           required
         />
 
-        <input type="submit" value="Login" />
+        <button type="submit" value="Login">LOGIN</button>
       </form>
       <div class="extra-links">
         <p><a href="#">Forgot password?</a></p>
-        <p>Don't have an account? <a href="#">Sign up</a></p>
+        <p>Don't have an account? <a href="signup-landing.html">Sign up</a></p>
       </div>
-    </div>
-  </body>
   <div>
-    <section id="login" class="form-section">
-      <h3>Login</h3>
-      <form action="/login" method="POST">
-        <input type="email" name="email" placeholder="Email" required />
-        <input
-          type="password"
-          name="password"
-          placeholder="Password"
-          required
-        />
-        <input type="submit" value="Login" />
-      </form>
-    </section>
+    
   </div>
+</body>
 </html>
