--- a/webpages/home.html
+++ b/webpages/home.html
@@ -16,54 +16,53 @@
         id="logo"
         width="5%"
       />
-     <nav>
-        <a href="home.html" >Home</a>
+      <nav>
+        <a href="home.html">Home</a>
         <a href="monthly-planner.html">Planner</a>
         <a href="Workout.html">Workout</a>
-        <a href="contact.html" >Contact Us</a>
+        <a href="contact.html">Contact Us</a>
       </nav>
     </div>
     <!--download section-->
+
     <div class="home-container">
-      <div class="download-app">
+      <img
+        src="/images/smartphone-153650_1280.png"
+        alt="cellphone image"
+        width="25%"
+      />
+      <div class="icons">
         <h1>Download Mobile App</h1>
-        <div class="about">
-          <div class="learn-more">
-            <h2>About Us</h2>
-            <br />
-            <p>
-              <strong>Gym Buddy App</strong> <br /><i
-                >Your personal pocket trainer</i
-              >. <br /><br />Gym Buddy App is a modern fitness tracker <br />
-              designed to help you stay consistent, motivated, and in control of
-              your fitness journey. Whether you’re lifting weights, tracking
-              your runs, or monitoring your diet, Gym Buddy keeps everything
-              organized in one place. With features like workout logging,
-              progress tracking, goal setting, reminders, and nutrition
-              monitoring, Gym Buddy empowers you to make healthier choices every
-              day. Simple to use, visually engaging, and tailored to your
-              lifestyle — it’s your companion for building strength, stamina,
-              and confidence.
-            </p>
-            <br />
-            <img
-              src="https://img.icons8.com/?size=100&id=30840&format=png&color=FFFFFF"
-              alt="apple logo"
-              width="10%"
-            />
-            <img
-              src="https://img.icons8.com/?size=100&id=rZwnRdJyYqRi&format=png&color=000000"
-              alt="play store"
-              width="10%"
-            />
-          </div>
-          <img
-            src="/images/smartphone-153650_1280.png"
-            alt="cellphone image"
-            width="20%"
-          />
-        </div>
-        <div class="btn-div">
+        <img
+          src="https://img.icons8.com/?size=100&id=30840&format=png&color=FFFFFF"
+          alt="apple logo"
+          width="20%"
+        />
+        <img
+          src="https://img.icons8.com/?size=100&id=rZwnRdJyYqRi&format=png&color=000000"
+          alt="play store"
+          width="20%"
+        />
+      </div>
+
+      <div class="about">
+        <h2>About Us</h2>
+        <br />
+        <p>
+          <strong>Gym Buddy App</strong> <br /><i
+            >Your personal pocket trainer</i
+          >
+          <br /><br>Gym Buddy App is a modern fitness tracker designed to help you
+          stay consistent, motivated, and in control of your fitness journey.
+          Whether you’re lifting weights, tracking your runs, or monitoring your
+          diet, Gym Buddy keeps everything organized in one place. With features
+          like workout logging, progress tracking, goal setting, reminders, and
+          nutrition monitoring, Gym Buddy empowers you to make healthier choices
+          every day. Simple to use, visually engaging, and tailored to your
+          lifestyle — it’s your companion for building strength, stamina, and
+          confidence.
+        </p>
+        <div class="btn">
           <button type="submit">
             <a href="signup-landing.html" target="_blank">Sign Up</a>
           </button>
