home page changes

--- a/webpages/home.html
+++ b/webpages/home.html
@@ -29,7 +29,7 @@
       <img
         src="/images/smartphone-153650_1280.png"
         alt="cellphone image"
-        width="25%"
+        width="25%" id="cellphone"
       />
       <div class="icons">
         <h1>Download Mobile App</h1>
