--- a/webpages/home.html
+++ b/webpages/home.html
@@ -33,16 +33,16 @@
       />
       <div class="icons">
         <h1>Download Mobile App</h1>
-        <img
+        <a href="https://www.apple.com/app-store/" target="_blank" alt="ios app store link"><img
           src="https://img.icons8.com/?size=100&id=30840&format=png&color=FFFFFF"
           alt="apple logo"
           width="20%"
-        />
-        <img
+        /></a>
+        <a href="https://play.google.com/store/games?hl=en" target="_blank" alt="google play store link"><img
           src="https://img.icons8.com/?size=100&id=rZwnRdJyYqRi&format=png&color=000000"
           alt="play store"
           width="20%"
-        />
+        /></a>
       </div>
 
       <div class="about">
