--- a/webpages/home.html
+++ b/webpages/home.html
@@ -9,58 +9,68 @@
   </head>
   <body class="landing">
     <!--navgigation bar-->
-    <div class="navbar">
+    <header>
       <img
         src="https://img.icons8.com/?size=100&id=122692&format=png&color=000000"
         alt="gym logo"
         id="logo"
         width="5%"
       />
-      <nav>
+      <nav class="navbar">
         <a href="home.html">Home</a>
         <a href="monthly-planner.html">Planner</a>
         <a href="Workout.html">Workout</a>
         <a href="contact.html">Contact Us</a>
       </nav>
-    </div>
+    </header>
+
     <!--download section-->
 
     <div class="home-container">
       <img
         src="/images/smartphone-153650_1280.png"
         alt="cellphone image"
-        width="25%" id="cellphone"
+        width="25%"
+        id="cellphone"
       />
       <div class="icons">
         <h1>Download Mobile App</h1>
-        <a href="https://www.apple.com/app-store/" target="_blank" alt="ios app store link"><img
-          src="https://img.icons8.com/?size=100&id=30840&format=png&color=FFFFFF"
-          alt="apple logo"
-          width="20%"
+        <a
+          href="https://www.apple.com/app-store/"
+          target="_blank"
+          alt="ios app store link"
+          ><img
+            src="https://img.icons8.com/?size=100&id=30840&format=png&color=FFFFFF"
+            alt="apple logo"
+            width="20%"
         /></a>
-        <a href="https://play.google.com/store/games?hl=en" target="_blank" alt="google play store link"><img
-          src="https://img.icons8.com/?size=100&id=rZwnRdJyYqRi&format=png&color=000000"
-          alt="play store"
-          width="20%"
+        <a
+          href="https://play.google.com/store/games?hl=en"
+          target="_blank"
+          alt="google play store link"
+          ><img
+            src="https://img.icons8.com/?size=100&id=rZwnRdJyYqRi&format=png&color=000000"
+            alt="play store"
+            width="20%"
         /></a>
       </div>
 
       <div class="about">
         <h2>About Us</h2>
-        <br />
+
         <p>
           <strong>Gym Buddy App</strong> <br /><i
             >Your personal pocket trainer</i
           >
-          <br /><br>Gym Buddy App is a modern fitness tracker designed to help you
-          stay consistent, motivated, and in control of your fitness journey.
-          Whether you’re lifting weights, tracking your runs, or monitoring your
-          diet, Gym Buddy keeps everything organized in one place. With features
-          like workout logging, progress tracking, goal setting, reminders, and
-          nutrition monitoring, Gym Buddy empowers you to make healthier choices
-          every day. Simple to use, visually engaging, and tailored to your
-          lifestyle — it’s your companion for building strength, stamina, and
-          confidence.
+          <br /><br />Gym Buddy App is a modern fitness tracker designed to help
+          you stay consistent, motivated, and in control of your fitness
+          journey. Whether you’re lifting weights, tracking your runs, or
+          monitoring your diet, Gym Buddy keeps everything organized in one
+          place. With features like workout logging, progress tracking, goal
+          setting, reminders, and nutrition monitoring, Gym Buddy empowers you
+          to make healthier choices every day. Simple to use, visually engaging,
+          and tailored to your lifestyle — it’s your companion for building
+          strength, stamina, and confidence.
         </p>
         <div class="btn">
           <button type="submit">
