--- a/webpages/Workout.html
+++ b/webpages/Workout.html
@@ -8,21 +8,45 @@
     <title>Workout</title>
   </head>
   <body class="workout-body">
-    <div class="navbar">
+     <!--navgigation bar-->
+    <header>
       <img
         src="https://img.icons8.com/?size=100&id=122692&format=png&color=000000"
         alt="gym logo"
         id="logo"
         width="5%"
       />
-      <nav>
+      <nav class="navbar">
         <a href="home.html">Home</a>
         <a href="monthly-planner.html">Planner</a>
         <a href="Workout.html">Workout</a>
         <a href="contact.html">Contact Us</a>
       </nav>
+      <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-    <h1>🏋️ Gym Buddy Fitness Tracker</h1>
+
+  <div class="mobile-menu" id="mobileMenu">
+    <a href="home.html">Home</a>
+    <a href="monthly-planner.html">Planner</a>
+    <a href="Workout.html">Workout</a>
+    <a href="contact.html">Contact Us</a>
+  </div>
+
+  <script>
+    const hamburger = document.getElementById("hamburger");
+    const mobileMenu = document.getElementById("mobileMenu");
+
+    hamburger.addEventListener("click", () => {
+      mobileMenu.classList.toggle("show");
+    });
+  </script>
+    </header>
+    </div>
+    <!--workout section-->
+    <h1 id="h1">🏋️ Gym Buddy Fitness Tracker</h1>
     <div class="workout-one">
       <!-- Fetch Exercises -->
       <div class="section-one">
