--- a/webpages/home.html
+++ b/webpages/home.html
@@ -95,10 +95,10 @@
         </p>
         <div class="btn">
           <button type="submit">
-            <a href="signup-landing.html" target="_blank">Sign Up</a>
+            <a href="signup-landing.html" target="_self">Sign Up</a>
           </button>
           <button type="submit">
-            <a href="login-landing.html" target="_blank">Log In</a>
+            <a href="login-landing.html" target="_self">Log In</a>
           </button>
         </div>
       </div>
